--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     autoplay
     loop
     preload="auto"
-    poster="/assets/preview/expero_video_poster.png">
-    <source src="/assets/expero-video.mp4" type="video/mp4"/>
-    <source src="/assets/expero-video.mov" type="video/mov"/>
-    <source src="/assets/expero-video.avi" type="video/avi"/>
-    <source src="/assets/expero-video.m4v" type="video/m4v"/>
-    <source src="/assets/expero-video.ogv" type="video/ogg"/>
-    <source src="/assets/expero-video.webm" type="video/webm"/>
+    poster="./assets/preview/expero_video_poster.png">
+    <source src="./assets/expero-video.mp4" type="video/mp4"/>
+    <source src="./assets/expero-video.mov" type="video/mov"/>
+    <source src="./assets/expero-video.avi" type="video/avi"/>
+    <source src="./assets/expero-video.m4v" type="video/m4v"/>
+    <source src="./assets/expero-video.ogv" type="video/ogg"/>
+    <source src="./assets/expero-video.webm" type="video/webm"/>
 </video>
 </body>
 </html>
