--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     preload="auto"
     poster="/test-video/assets/preview/expero_video_poster.png">
     <source src="/test-video/assets/expero-video.mp4" type="video/mp4"/>
-    <source src="/test-video/assets/expero-video.mov" type="video/mov"/>
-    <source src="/test-video/assets/expero-video.avi" type="video/avi"/>
-    <source src="/test-video/assets/expero-video.m4v" type="video/m4v"/>
-    <source src="/test-video/assets/expero-video.ogv" type="video/ogg"/>
-    <source src="/test-video/assets/expero-video.webm" type="video/webm"/>
+<!--    <source src="/test-video/assets/expero-video.mov" type="video/mov"/>-->
+<!--    <source src="/test-video/assets/expero-video.avi" type="video/avi"/>-->
+<!--    <source src="/test-video/assets/expero-video.m4v" type="video/m4v"/>-->
+<!--    <source src="/test-video/assets/expero-video.ogv" type="video/ogg"/>-->
+    <source src="/test-video/assets/video.webm" type="video/webm"/>
 </video>
 </body>
 </html>
